objects/Account.object
<CustomObject>
    <fields>
        <fullName>AW_AUMSourceExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The external ID of the Assets Under Management source system</description>
        <externalId>true</externalId>
        <label>AUM Source External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_AUM__c</fullName>
        <description>The Asset under Management (total market value) of the portfolio that the adviser handles on behalf of their clients</description>
        <formula>AW_TotalHeldInvestments__c +  AW_TotalHeldRetirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AccountOwnerId__c</fullName>
        <description>Name of the user that owns the account</description>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_AccountRecordType__c</fullName>
        <description>This field will be used in matching rules to identify the record type of the Account records.</description>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Account_Ownership__c</fullName>
        <description>Input field used by Orphan Indicator formula field to display who owns the Account or if it&apos;s an Orphan</description>
        <inlineHelpText>Please note that this field will only be updated once the Change of Consultant Form Task has been completed because only then will the Client no longer be considered an Orphan</inlineHelpText>
        <label>Ownership Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advice Centre</fullName>
                </value>
                <value>
                    <fullName>Adviser</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BPO_Client_Id__c</fullName>
        <description>The unique client ID within BPO</description>
        <label>BPO Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BirthdaysThisMonth__c</fullName>
        <description>Indicates if the client has a birthday this month</description>
        <formula>LPAD(TEXT(MONTH( PersonBirthdate )), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT(DAY(PersonBirthdate)), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdays This Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BranchId__c</fullName>
        <description>Identifies which bank the client belongs to</description>
        <externalId>true</externalId>
        <label>Branch ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_BusinessType__c</fullName>
        <description>Indicates the legal form of the entity organisation</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_BusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BypassValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass validation rules for Accounts created via API.</description>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_CLIENT_TotalAssets__c</fullName>
        <description>Total value of the clients assets</description>
        <formula>AW_TotalAssets__c + AW_TotalHeldInvestments__c + AW_TotalHeldAwayInvestments__c + AW_TotalHeldAwayRetirement__c +  AW_TotalHeldRetirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Assets (Client)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_ClientId__c</fullName>
        <description>The unique client identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>atWork Client ID</inlineHelpText>
        <label>Client ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CommunityUserCreationInitiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when system user has initiated for Community User to be created</description>
        <label>Community User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_CompanyRegistrationTrustNumber__c</fullName>
        <description>The business registration number of the entity being managed</description>
        <label>Company Registration/Trust Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Company__c</fullName>
        <description>Denotes company name</description>
        <label>Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ContactPreference__c</fullName>
        <description>This field represents the contact method from Liberty that the Client prefers</description>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CorrespondencePreference__c</fullName>
        <description>This field represents the correspondence method from Liberty that the Client prefers.</description>
        <label>Correspondence Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CountOfFinancialAccounts__c</fullName>
        <description>This field is used to store the total number of financial accounts related to an account.</description>
        <label>Count of Financial Accounts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CountOfInsurancePolicies__c</fullName>
        <description>This field is used to store the total number of Insurance policies related to an account.</description>
        <label>Count of Insurance Policies</label>
        <summaryFilterItems>
            <field>InsurancePolicy.AW_PolicyCategory__c</field>
            <operation>equals</operation>
            <value>Protection</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>InsurancePolicy.Status</field>
            <operation>equals</operation>
            <value>IN FORCE</value>
        </summaryFilterItems>
        <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AW_Country_Of_Birth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the clients country of birth</description>
        <label>Country of Birth</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Changed__c</fullName>
        <description>Field to show if the address 1 was changed or not.</description>
        <label>Credit Bureau Address 1 Changed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1City__c</fullName>
        <description>Stores address 1 city as received from the Transunion response for this account.</description>
        <label>Credit Bureau Address 1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Line1__c</fullName>
        <description>Stores address 1 line 1 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Line2__c</fullName>
        <description>Stores address 1 line 2 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1OwnerTenant__c</fullName>
        <description>This field is used to store information as if the person is owner or tenant at address 1.</description>
        <label>Credit Bureau Address 1 Owner/Tenant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1PostalCode__c</fullName>
        <description>This field is used to store the postal code for address 1 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1ProvinceCode__c</fullName>
        <description>This field is used to store the province code for address 1 received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Province__c</fullName>
        <description>This field is used to store the province for address 1 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress1Suburb__c</fullName>
        <description>This field is used to store the suburb for address 1 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 1 Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Changed__c</fullName>
        <description>This field is used to show if the address 2 was changed or not.</description>
        <label>Credit Bureau Address 2 Changed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2City__c</fullName>
        <description>This field is used to store the city for address 2 as received from Transunion response for this account.</description>
        <label>Credit Bureau Address 2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Line1__c</fullName>
        <description>This field is used to store the line 1 for second address received from Transunion response for this account.</description>
        <label>Credit Bureau Address 2 Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2OwnerTenant__c</fullName>
        <description>This field is used to store information if the person is owner or tenant at address 2.</description>
        <label>Credit Bureau Address 2 Owner/Tenant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2PostalCode__c</fullName>
        <description>This field is used to store the postal code for second address received from Transunion response for this account.</description>
        <label>Credit Bureau Address 2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2ProvinceCode__c</fullName>
        <description>This field is used to store the province code for address 2 received in Transunion response for this account.</description>
        <label>Credit Bureau Address 2 Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Province__c</fullName>
        <description>This field is used to store the province for address 2 received from Transunion response for this account.</description>
        <label>Credit Bureau Address 2 Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAddress2Suburb__c</fullName>
        <description>This field is used to store the suburb for address 2 received from Transunion response for this account.</description>
        <label>Credit Bureau Address 2 Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauAlternativeEmail__c</fullName>
        <description>Used to store alternative email received from Transunion response for this account.</description>
        <label>Credit Bureau Alternative Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCallStatus__c</fullName>
        <description>Stores the last Transunion API call status.</description>
        <label>Credit Bureau Requested Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCellNumber__c</fullName>
        <description>This field is used to store the cell number received from Transunion response for the account.</description>
        <label>Credit Bureau Cell Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCreditScoreIndicator__c</fullName>
        <description>This field is used to display the credit score rating for an account as per the credit score received in the Transunion response.</description>
        <formula>IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Poor.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Unfavourable.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_BelowAverage.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Average.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Favourable.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Good.MasterLabel,
IF(AW_CreditBureauCreditScore__c &lt;= $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.AW_Threshold__c, IMAGE( $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.AW_ImageURL__c, &quot;&quot; , 15, 30) &amp; &quot; &quot; &amp; $CustomMetadata.AW_CreditScoreRating__mdt.AW_Excellent.MasterLabel, &quot;&quot;)
))))))</formula>
        <label>Credit Bureau Credit Score Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauCreditScore__c</fullName>
        <description>This field is used to store the credit score as received from the Transunion response.</description>
        <label>Credit Bureau Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauDeceasedDate__c</fullName>
        <description>Used to store deceased date received in Transunion response.</description>
        <label>Credit Bureau Deceased Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauDependants__c</fullName>
        <description>Used to store the number of dependants as received in the Transunion response.</description>
        <label>Credit Bureau Dependants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEmployer1__c</fullName>
        <description>Used to store employer 1 for this account as received in Transunion response.</description>
        <label>Credit Bureau Employer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEmployer2__c</fullName>
        <description>Used to store employer 2 for this account as received in Transunion response.</description>
        <label>Credit Bureau Employer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauEstimatedNetIncome__c</fullName>
        <description>This field is used to store the estimated net income of an account as received in the Transunion response.</description>
        <label>Credit Bureau Estimated Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename1__c</fullName>
        <description>Used to store forename 1 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename2__c</fullName>
        <description>Used to store forename 2 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauForename3__c</fullName>
        <description>Used to store forename 3 as received in the Transunion response.</description>
        <label>Credit Bureau Forename 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauGender__c</fullName>
        <description>Used to store gender as received in the Transunion response.</description>
        <label>Credit Bureau Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauIncomeSegment__c</fullName>
        <description>Used to display the income segment of an account based on the estimated net income received in the Transunion response.</description>
        <formula>IF(AW_CreditBureauEstimatedNetIncome__c &lt; 0, &quot;&quot;, 
			IF(AW_CreditBureauEstimatedNetIncome__c  &lt;= $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c , &quot;(0-&quot; &amp;  TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c / 1000)  &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.MasterLabel, 
		   IF(AW_CreditBureauEstimatedNetIncome__c &lt;= $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c, &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Emerging.AW_Threshold__c / 1000) &amp; &quot;k-&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c / 1000) &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.MasterLabel,   
					  IF(AW_CreditBureauEstimatedNetIncome__c &lt;=  $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c , &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_MidMarket.AW_Threshold__c / 1000) &amp; &quot;k-&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c / 1000) &amp; &quot;k) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.MasterLabel,  
									IF(AW_CreditBureauEstimatedNetIncome__c &gt; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c, &quot;(&quot; &amp; TEXT($CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_Affluent.AW_Threshold__c / 1000) &amp; &quot;k+) &quot; &amp; $CustomMetadata.AW_CreditBureauNetIncomeRange__mdt.AW_HighNetWorth.MasterLabel, &quot;&quot;)  ) ) ) )</formula>
        <label>Credit Bureau Income Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauLastCallDateTime__c</fullName>
        <description>Stores the last Transunion API call datetime</description>
        <label>Credit Bureau Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauMaritalStatus__c</fullName>
        <description>Used to store the marital status as per the response received from Transunion.</description>
        <label>Credit Bureau Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauOccupation1__c</fullName>
        <description>Used to store occupation 1 received in Transunion response.</description>
        <label>Credit Bureau Occupation 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauOccupation2__c</fullName>
        <description>Used to store occupation 2 as received in Transunion response.</description>
        <label>Credit Bureau Occupation 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauPeriodAtAddress1__c</fullName>
        <description>Used to store the number of years at address 1 as received in Transunion response.</description>
        <label>Credit Bureau Period At Address 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauPeriodAtAddress2__c</fullName>
        <description>Used to store the number of years at address 2 as received in Transunion response.</description>
        <label>Credit Bureau Period At Address 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSpouseName1__c</fullName>
        <description>Used to store spouse name 1 received in Transunion response.</description>
        <label>Credit Bureau Spouse Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSpouseName2__c</fullName>
        <description>Used to store spouse name 2 received in Transunion response.</description>
        <label>Credit Bureau Spouse Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier10__c</fullName>
        <description>Used to store supplier 10 received in Transunion response.</description>
        <label>Credit Bureau Supplier 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier11__c</fullName>
        <description>Used to store supplier 11 received in Transunion response.</description>
        <label>Credit Bureau Supplier 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSupplier12__c</fullName>
        <description>Used to store supplier 12 received in Transunion response.</description>
        <label>Credit Bureau Supplier 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauSurname__c</fullName>
        <description>Used to store surname received in Transunion response.</description>
        <label>Credit Bureau Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTelephoneNumber__c</fullName>
        <description>Used to store telephone number received in Transunion response.</description>
        <label>Credit Bureau Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTenure1__c</fullName>
        <description>Used to store tenure in occupation 1 as received in Transunion response.</description>
        <label>Credit Bureau Tenure 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTenure2__c</fullName>
        <description>Used to store tenure in occupation 2 as received in Transunion response.</description>
        <label>Credit Bureau Tenure 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_CreditBureauTitle__c</fullName>
        <description>Used to store title received in Transunion response.</description>
        <label>Credit Bureau Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_DateOfTheInitialLoad__c</fullName>
        <description>Date of the Initial load of the clients information</description>
        <label>Date of the initial load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_EmailUsage__c</fullName>
        <description>This field indicates if the Email Usage description is Business or Private</description>
        <label>Email Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Email__c</fullName>
        <description>This field is used to store an Email address for a Business Account.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AW_EngagementFrequency__c</fullName>
        <description>Select when to be contacted from picklist</description>
        <label>Engagement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                    <default>true</default>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_EngagementType__c</fullName>
        <description>User can select engagement preference from picklist</description>
        <inlineHelpText>Please note the engagement preferences pertain only to communications between adviser and client; and not Liberty communications.</inlineHelpText>
        <label>Engagement Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                    <isActive>false</isActive>
                    <label>Message</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_FA_TotalAssets__c</fullName>
        <description>Total Value of the clients assets</description>
        <label>Total Assets (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeldAwayBank__c</fullName>
        <description>The total value of a clients bank accounts that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Bank (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeldAwayCreditCard__c</fullName>
        <description>The total value of a clients credit cards that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Credit Card (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeldAwayInvestments__c</fullName>
        <description>The total value of a clients investments that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Investments (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeldAwayOtherLiabilities__c</fullName>
        <description>The total value of a clients Liabilities that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Other Liabilities (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeldAwayRetirement__c</fullName>
        <description>The total value of a financial advisers clients retirement funds that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Retirement (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalHeld_Away_Loan_account__c</fullName>
        <description>The total value of a Loan accounts that are managed by a Financial Institute or Third Party other than Liberty</description>
        <label>Total Held Away Loan Account (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_FA_TotalLiabilities__c</fullName>
        <description>The total monetary value of the clients liabilities managed by Liberty or the adviser</description>
        <label>Total Liabilities (FA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Financial_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Financial Adviser that manages the clients portfolio</description>
        <label>Financial Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>